force-app/main/default/objects/custom_create15__c/custom_create15__c.object-meta.xml
<CustomObject>
    <label>Custom created object15</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects15</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>