force-app/main/default/objects/custom_create15__c/fields/custom_create_15field505__c.field-meta.xml
<CustomField>
    <fullName>custom_create_15field505__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 15field505</label>
    <type>Checkbox</type>
</CustomField>